Refine rules and elminate unused class

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This code has been derived from the NARA File Analyzer and Metadata Harvester which is available at https://github.com/usnationalarchives/File-Analyzer.
+
 NARA OPEN SOURCE AGREEMENT VERSION 1.3, 
 Based on NASA Open Source Agreement for Government Agencies, as approved by the Open Source Initiative. 
 THIS OPEN SOURCE AGREEMENT ("AGREEMENT") DEFINES THE RIGHTS OF USE,
