--- a/README
+++ b/README
@@ -21,9 +21,17 @@ This code will build 3 flavors of the File Analyzer.
 	This version of the file analyzer is a self-extracting jar file that references both the core and dspace file analyzer jar files.
 	Sample data will also be added. 
 
-The original license information is contained below.
 
------------------------------
+
+
+
+=================================================================================================
+License information is contained below.
+-------------------------------------------------------------------------
+
+=================================================================================================
+The NARA license for the base code is contained below.
+-------------------------------------------------------------------------
 
 NARA OPEN SOURCE AGREEMENT VERSION 1.3, 
 Based on NASA Open Source Agreement for Government Agencies, as approved by the Open Source Initiative. 
