--- a/README
+++ b/README
@@ -21,8 +21,13 @@ APPLICATION DESCRIPTION
 - Same UI for all tasks
 
 OVERVIEW PRESENTATIONS
+Code4Lib Presentation
 - https://docs.google.com/presentation/d/1Sq2gqGm58DeuzSTigEofGGci_szqo5rwctgqER2HOKo/edit?usp=sharing
 - https://archive.org/details/Code4LibLightningTalksApr2013TerryBrady
+OpenRepositories 2013 Presentation
+- http://or2013.net/sessions/focus-your-content-not-ingesting-your-content
+- http://or2013.net/sites/or2013.net/files/slides/OR2013%20Focus%20on%20Your%20Content.ppt
+DSpace Tools Overview
 - http://prezi.com/wridwe2h0d4a/automating-dspace-folder-creation/?kw=view-wridwe2h0d4a&rc=ref-16497460
 - http://prezi.com/cigoderbzi2g/dspace-ingest-via-file-analyzer/?kw=view-cigoderbzi2g&rc=ref-16497460
 
