--- a/README
+++ b/README
@@ -37,7 +37,8 @@ This code has been derived from the NARA File Analyzer and Metadata Harvester wh
 https://github.com/usnationalarchives/File-Analyzer.
 
 PREREQUISITES
-- JDK 1.7 or higher
+- JDK 1.7 or higher (for build)
+- JRE 1.6 or higher (for runtime)
 - Maven (or you will need to compile the modules manually)
 
 INSTALLATION
