Add digitization tools documentation

--- a/README
+++ b/README
@@ -32,6 +32,8 @@ Code4Lib Presentation
 DSpace Tools Overview
 - http://prezi.com/wridwe2h0d4a/automating-dspace-folder-creation/?kw=view-wridwe2h0d4a&rc=ref-16497460
 - http://prezi.com/cigoderbzi2g/dspace-ingest-via-file-analyzer/?kw=view-cigoderbzi2g&rc=ref-16497460
+Digitization Tools
+- https://docs.google.com/document/d/1KopsLHZCN2dxmZoWAV4QUpFETBRnpOID8lpq65I6Ne4/pub
 
 ==================================================================================================
 
