--- a/README
+++ b/README
@@ -21,6 +21,8 @@ APPLICATION DESCRIPTION
 - Same UI for all tasks
 
 OVERVIEW PRESENTATIONS
+FILE ANALYZER WIKI
+- https://github.com/Georgetown-University-Libraries/File-Analyzer/wiki
 WRLC (Washington Research Library Consortium) Forum Presentation - Sept 2013
 - https://docs.google.com/presentation/d/1hqbusyuNcsphFeAmsNuI3120c4iQqBycB9n7RQ6txdA/pub?start=false&loop=false&delayms=3000
 OpenRepositories 2013 Presentation
