--- a/README
+++ b/README
@@ -61,8 +61,7 @@ This code will build 3 flavors of the File Analyzer.
 (3) Demo File Analyzer
 	This version contains extensions illustrating various capabilities of the File Analyzer.  
 	This version of the file analyzer is a self-extracting jar file that references both the core and dspace file analyzer jar files.
-	This version of the application uses features of Apache Tika
-	Sample data will also be added (TBD)
+	This version of the application uses features of Apache Tika and BagIt
 
 =================================================================================================
 License information is contained below.
