--- a/README
+++ b/README
@@ -10,6 +10,8 @@ The application assembles a toolkit of tasks a user can perform
 
 The modular code makes it easy to deploy new code and to share code.
 
+(test change)
+
 APPLICATION DESCRIPTION
 - Desktop Application written in Java
 - Scans a file system and performs an action on files
