Compile with Java 7 to utilized named matching groups

--- a/README
+++ b/README
@@ -15,8 +15,9 @@ This code has been derived from the NARA File Analyzer and Metadata Harvester wh
 https://github.com/usnationalarchives/File-Analyzer.
 
 PREREQUISITES
-- JDK 1.6 or higher (for build)
-- JRE 1.6 or higher (for runtime)
+- JDK 1.7 or higher (for build)
+- JRE 1.7 or higher (for runtime)
+- (If you need to run with Java 6, see Releases for an older version)
 - Maven (or you will need to compile the modules manually)
 
 INSTALLATION
